build,meson: introspection is setup as a feature
(cherry picked from commit d5a992d30fc7a0b496401c3a89ca98ddf6e9114a)

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -90,7 +90,7 @@ option('plugin_zte', type: 'boolean', value: true, description: 'enable zte plug
 
 option('qcdm_standalone', type: 'boolean', value: true, description: 'enable standalone qdcm')
 
-option('introspection', type: 'boolean', value: true, description: 'build introspection support')
+option('introspection', type: 'feature', value: 'auto', description: 'build introspection support')
 option('vapi', type: 'boolean', value: false, description: 'build vala bindings')
 
 option('man', type: 'boolean', value: true, description: 'build manual pages')
