build,meson: Make use of partial_dependency for generated dependency
The generated objects in `libmm-glib` are include in
`libmm_glib_dep` one by one to avoid the link to the generated
library that is included as a whole in `libmm-glib`.

meson includes a way to include partial objects of a dependency by
using the `partial_dependency` method, so by taking advantage of it
almost all objects are included.

(cherry picked from commit b3b16b3dc2608242a2e88d6b2870c403fb5a5d9c)

--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -118,9 +118,9 @@ libmm_glib = shared_library(
 )
 
 libmm_glib_dep = declare_dependency(
-  sources: gen_headers,
-  include_directories: [libmm_glib_inc, generated_inc],
-  dependencies: deps + [glib_deps],
+  include_directories: libmm_glib_inc,
+  # FIXME: glib_deps is included because `dependencies` parameter is not part of partial_dependency
+  dependencies: deps + [glib_deps, libmm_generated_dep.partial_dependency(sources: true, includes: true)],
   link_with: libmm_glib,
 )
 
