build: enable qcom-soc plugin by default
As people are running distros like Debian, Archlinux, Fedora, etc., on
laptops powered by Qualcomm Snapdragon SoCs, e.g. Lenovo Yoga C630, it
makes sense to enable qcom-soc plugin by default, so that MM aarch64
package can be built by those distros more easily.

Signed-off-by: Shawn Guo <shawn.guo@linaro.org>
(cherry picked from commit 57eb2390896ec4b8f310ac77a0a71344caa6596e)

--- a/configure.ac
+++ b/configure.ac
@@ -525,7 +525,7 @@ MM_ENABLE_PLUGIN([option],
 MM_ENABLE_PLUGIN([option-hso],
                  [with_shared_option])
 MM_ENABLE_PLUGIN([pantech])
-MM_ENABLE_PLUGIN_DISABLED([qcom-soc])
+MM_ENABLE_PLUGIN([qcom-soc])
 MM_ENABLE_PLUGIN([quectel])
 MM_ENABLE_PLUGIN([samsung],
                  [with_shared_icera])
