--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,9 @@ stages:
 
 .common_variables:
   variables:
+    LIBMBIM_BRANCH: mbim-1-26
+    LIBQRTR_BRANCH: master
+    LIBQMI_BRANCH: qmi-1-30
     FDO_UPSTREAM_REPO: mobile-broadband/ModemManager
     FDO_DISTRIBUTION_VERSION: '20.04'
     FDO_DISTRIBUTION_TAG: '2021-10-03.1'
@@ -44,7 +47,7 @@ build-no-qmi:
     - tags
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
+    - git clone --depth 1 --branch $LIBMBIM_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
     - pushd libmbim
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled -Dbash_completion=false
     - ninja -C build
@@ -67,13 +70,13 @@ build-qmi-qrtr-no-mbim:
     - tags
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - git clone --depth 1 --branch $LIBQRTR_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
     - pushd libqrtr-glib
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - git clone --depth 1 --branch $LIBQMI_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled -Dbash_completion=false -Dmbim_qmux=disabled -Dqrtr=enabled -Dcollection=basic
     - ninja -C build
@@ -96,7 +99,7 @@ build-qmi-no-qrtr-no-mbim:
     - tags
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - git clone --depth 1 --branch $LIBQMI_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled -Dbash_completion=false -Dmbim_qmux=disabled -Dqrtr=disabled -Dcollection=basic
     - ninja -C build
@@ -136,7 +139,7 @@ build-qmi-newest-commands:
     - tags
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - git clone --depth 1 --branch $LIBQMI_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled -Dbash_completion=false -Dmbim_qmux=disabled -Dqrtr=disabled -Dcollection=basic
     - ninja -C build
@@ -156,19 +159,19 @@ build-single-plugins:
   only:
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
+    - git clone --depth 1 --branch $LIBMBIM_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
     - pushd libmbim
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled -Dbash_completion=false
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - git clone --depth 1 --branch $LIBQRTR_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
     - pushd libqrtr-glib
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - git clone --depth 1 --branch $LIBQMI_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=disabled -Dbash_completion=false -Dmbim_qmux=enabled -Dqrtr=enabled -Dcollection=basic
     - ninja -C build
@@ -195,19 +198,19 @@ build-default:
     - merge_requests
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
+    - git clone --depth 1 --branch $LIBMBIM_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
     - pushd libmbim
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=enabled -Dbash_completion=false
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - git clone --depth 1 --branch $LIBQRTR_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
     - pushd libqrtr-glib
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=enabled
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - git clone --depth 1 --branch $LIBQMI_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=enabled -Dbash_completion=false -Dmbim_qmux=enabled -Dqrtr=enabled -Dcollection=basic
     - ninja -C build
@@ -249,19 +252,19 @@ build-meson-release:
     - tags
     - schedules
   script:
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
+    - git clone --depth 1 --branch $LIBMBIM_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libmbim.git
     - pushd libmbim
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=enabled -Dbash_completion=false
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - git clone --depth 1 --branch $LIBQRTR_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
     - pushd libqrtr-glib
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=enabled
     - ninja -C build
     - ninja -C build install
     - popd
-    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - git clone --depth 1 --branch $LIBQMI_BRANCH https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - meson setup build --prefix=/usr -Dgtk_doc=false -Dintrospection=enabled -Dbash_completion=false -Dmbim_qmux=enabled -Dqrtr=enabled -Dcollection=basic
     - ninja -C build
