--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -45,6 +45,7 @@ headers = files(
   'mm-object.h',
   'mm-pco.h',
   'mm-signal.h',
+  'mm-signal-threshold-properties.h',
   'mm-sim.h',
   'mm-simple-connect-properties.h',
   'mm-simple-status.h',
@@ -98,6 +99,7 @@ sources = files(
   'mm-object.c',
   'mm-pco.c',
   'mm-signal.c',
+  'mm-signal-threshold-properties.c',
   'mm-sim.c',
   'mm-simple-connect-properties.c',
   'mm-simple-status.c',
