iface-modem: use external dispatcher to attempt FCC unlock
We remove the built-in FCC unlock procedures from the ModemManager, we
will no longer run them automatically, and instead rely on external
scripts/programs to do that.

Packages providing the external FCC unlock tools can install them in
${pkglibdir}/fcc-unlock.d.

Users manually enabling external FCC unlock tools can install them in
${pkgsysconfdir}/fcc-unlock.d.

The user-enabled path takes precedence over the package-enabled one.

--- a/configure.ac
+++ b/configure.ac
@@ -190,6 +190,10 @@ dnl-----------------------------------------------------------------------------
 dnl System paths
 dnl
 
+dnl ModemManager configuration directory
+pkgsysconfdir="${sysconfdir}/ModemManager"
+AC_SUBST(pkgsysconfdir)
+
 dnl DBus system directory
 AC_ARG_WITH(dbus-sys-dir, AS_HELP_STRING([--with-dbus-sys-dir=DIR], [where D-BUS system.d directory is]))
 if test -n "$with_dbus_sys_dir" ; then
@@ -618,6 +622,7 @@ echo "
 
     System paths:
       prefix:                  ${prefix}
+      configuration directory: ${pkgsysconfdir}
       D-Bus system directory:  ${DBUS_SYS_DIR}
       udev base directory:     ${UDEV_BASE_DIR}
       systemd unit directory:  ${with_systemdsystemunitdir}
