core: replace 'dummy' with 'placeholder'

--- a/plugins/tests/gsm-port.conf
+++ b/plugins/tests/gsm-port.conf
@@ -8,11 +8,11 @@ ATX4                 \r\nOK\r\n
 AT&C1                \r\nOK\r\n
 AT+IFC=1,1           \r\nOK\r\n
 AT+GCAP              \r\n+GCAP: +CGSM +DS +ES\r\n\r\nOK\r\n
-ATI                  \r\nManufacturer: Dummy vendor\r\nModel: Dummy model\r\nRevision: Dummy revision\r\nIMEI: 001100110011002<CR><LF>+GCAP: +CGSM,+DS,+ES\r\n\r\nOK\r\n
+ATI                  \r\nManufacturer: Some vendor\r\nModel: Some model\r\nRevision: Some revision\r\nIMEI: 001100110011002<CR><LF>+GCAP: +CGSM,+DS,+ES\r\n\r\nOK\r\n
 AT+WS46=?            \r\n+WS46: (12,22)\r\n\r\nOK\r\n
-AT+CGMI              \r\nDummy vendor\r\n\r\nOK\r\n
-AT+CGMM              \r\nDummy model\r\n\r\nOK\r\n
-AT+CGMR              \r\nDummy revision\r\n\r\nOK\r\n
+AT+CGMI              \r\nSome vendor\r\n\r\nOK\r\n
+AT+CGMM              \r\nSome model\r\n\r\nOK\r\n
+AT+CGMR              \r\nSome revision\r\n\r\nOK\r\n
 AT+CGSN              \r\n123456789012345\r\n\r\nOK\r\n
 AT+CGDCONT=?         \r\n+CGDCONT: (1-11),"IP",,,(0-2),(0-3)\r\n+CGDCONT: (1-11),"IPV6",,,(0-2),(0-3)\r\n+CGDCONT: (1-11),"IPV4V6",,,(0-2),(0-3)\r\n+CGDCONT: (1-11),"PPP",,,(0-2),(0-3)\r\n\r\nOK\r\n
 AT+CIMI              \r\n998899889988997\r\n\r\nOK\r\n
