build,meson: Make feature options boolean
Different options are set as `feature`, also every possible plugin,
but this may cause confusion.

All options set as `feature` but plugins have been made `boolean` to
avoid further confusions.

`help2man` is also installed in the CI image because is required to
build different libraries.

(cherry picked from commit ec2e5403f14892047f391f63982bf5e4b30438c2)

--- a/cli/meson.build
+++ b/cli/meson.build
@@ -25,10 +25,11 @@ sources = files(
   'mmcli-sms.c',
 )
 
-deps = [
-  gudev_dep,
-  libmm_glib_dep,
-]
+deps = [libmm_glib_dep]
+
+if enable_udev
+  deps += gudev_dep
+endif
 
 executable(
   'mmcli',
